Changed cardThumbnail text to white regardless of theme to ensure contrast against its black background.

--- a/frontend/src/components/cardThumbnail/cardThumbnail.scss
+++ b/frontend/src/components/cardThumbnail/cardThumbnail.scss
@@ -22,13 +22,15 @@
 			bottom: 0;
 			padding: $spacingExtraSmall $spacingSmall;
 			text-align: left;
-			color: var(--secondary);
+			color: #fff;
+			background: #000; //fallback
 			background: linear-gradient(to top, black, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
 			opacity: 0;
 			transition: 0.3s;
 
 			h3 {
 				margin: 0.2rem 0 $spacingExtraSmall 0;
+				color: #fff;
 			}
 		}
 
